historial de pagos en contratas

--- a/public/assets/js/plugins/datatables/buttons-bs4/buttons.bootstrap4.css
+++ b/public/assets/js/plugins/datatables/buttons-bs4/buttons.bootstrap4.css
@@ -27,6 +27,11 @@
     transform: rotate(360deg);
   }
 }
+
+.dt-buttons{
+  margin-bottom: 15px;
+}
+
 div.dt-button-info {
   position: fixed;
   top: 50%;
